--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>MZ</title>
 </head>
 <body>
-    <h2>I am testing github page</h2>
+    <nav class="nav">
+        <section class="navigation">
+            <div class="logo"></div>
+            <div class="menu">
+                <ul>
+                    <li>About Me</li>
+                    <li>My Works</li>
+                    <li>Say Hello</li>
+                    <li>Print My Resume</li>
+                </ul>
+            </div>
+        </section>
+    </nav>
 </body>
 </html>
